# r-audio-player

./: .gitattributes  README.md  mainwindow.cpp
r audio player/: CMakeLists.txt  README.md  app.rc  audioplayer.cpp  audioplayer.h  clicklabel.h  clickslider.h  folderdialog.cpp  folderdialog.h  library.cpp  library.h  main.cpp  mainwindow.cpp  mainwindow.h  miniaudio.h  miniaudio_implementation.cpp  r audio player.vcxproj  r audio player.vcxproj.filters  r_audio_player.desktop  r_audio_player.desktop.in  resources.qrc  settings.h  settingsdialog.cpp  settingsdialog.h  stb_vorbis.c
